# quantities.rs

./: Cargo.toml
physical_quantities/: Cargo.toml
physical_quantities/src/: lib.rs
physical_quantities/src/base/: length.rs  mass.rs  mod.rs  temperature.rs  time.rs
physical_quantities/src/derived/: acceleration.rs  area.rs  datathroughput.rs  datavolume.rs  energy.rs  force.rs  mod.rs  speed.rs  volume.rs
qty-macros/: Cargo.toml  example.md
qty-macros/src/: lib.rs  parsing.rs  quantity_attr_helper.rs
qty-macros/src/codegen/: mod.rs  quantity.rs  unit.rs
qty-macros/tests/: macro_tests.rs
src/: acceleration.rs  amnt_f64.rs  area.rs  converter.rs  duration.rs  frequency.rs  length.rs  lib.rs  mass.rs  power.rs  prelude.rs  rate.rs  temperature.rs  value.rs  volume.rs
src/si/: length.rs  mass.rs  mod.rs  temperature.rs  time.rs  velocity.rs
tests/: test_qty.rs  test_rate.rs
