[package]
name = "quantity_macros"
version = "0.11.0"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Unit-safe computations with quantities."
readme = "README.md"
homepage = "https://github.com/mamrhein/quantities.rs"
repository = "https://github.com/mamrhein/quantities.rs"
documentation = "https://docs.rs/quantities/"
license-file = "LICENSE.TXT"
keywords = ["quantity", "unit", "unit-safe", "measure", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
qty-macros = { version = "0.11.0", path = "qty-macros" }

[dev-dependencies]
trybuild = "1"

[workspace]
members = [".", "qty-macros"]
